<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/adm_navigation_messages"
        android:icon="@drawable/ic_email_black_24dp"
        android:iconTint="@color/colorWhite"
        android:title="@string/mensagens" />

    <item
        android:id="@+id/adm_navigation_reports"
        android:icon="@drawable/ic_receipt_white_24dp"
        android:title="@string/relatorios" />

    <item
        android:id="@+id/adm_navigation_cadastro"
        android:icon="@drawable/ic_storage_black_24dp"
        android:title="@string/cadastros"
        />

    <item
        android:id="@+id/adm_navigation_registrations"
        android:icon="@drawable/ic_folder_shared_white_24dp"
        android:title="@string/matriculas" />

    <item
        android:id="@+id/adm_navigation_events"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:iconTint="@color/colorWhite"
        android:title="@string/eventos" />

</menu>
